# cdread

./: cdread.cabal  ripcd.hs
Network/: FreeDB.hs
Network/FreeDB/: Utils.hs
System/: CDROM.chs  CDROM.hs
System/CDROM/: Internal.chs
cbits/: cd-discid.c  cd-discid.cc
include/: cd-discid.h
