name:                cdread
version:             0.1.0.0
license-file:        LICENSE
author:              Takahiro HIMURA
maintainer:          taka@himura.jp
category:            System
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: cbits, include

library
    build-depends:
        base >= 4.7 && < 5
      , attoparsec
      , bytestring
      , exceptions
      , http-conduit
      , http-types
      , text
      , unix
    exposed-modules:
        System.CDROM
        System.CDROM.Internal
        Network.FreeDB
    build-tools: c2hs
    c-sources: cbits/cd-discid.cc
    include-dirs: include
    default-language: Haskell2010
    extra-libraries: stdc++
    ghc-options: -Wall
