name:                cdread
version:             0.1.0.0
license-file:        LICENSE
author:              Takahiro HIMURA
maintainer:          taka@himura.jp
category:            System
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: cbits, include

library
    build-depends:
        base >= 4.7 && < 5
      , attoparsec
      , bytestring
      , exceptions
      , http-conduit
      , http-types
      , text
      , unix
    exposed-modules:
        System.CDROM
        System.CDROM.Internal
        Network.FreeDB
        Network.FreeDB.Utils
    build-tools: c2hs
    c-sources: cbits/cd-discid.cc
    include-dirs: include
    default-language: Haskell2010
    extra-libraries: stdc++
    ghc-options: -Wall

executable cdread
    main-is: cdread.hs
    hs-source-dirs: bin
    build-depends:
        base >= 4.7 && < 5
      , aeson
      , bytestring
      , cdread
      , containers
      , http-conduit
      , lens
      , lens-aeson
      , network-uri
      , optparse-applicative
      , text
      , transformers
      , unordered-containers
      , yaml
    default-language: Haskell2010
    ghc-options: -Wall
